--- a/tests/B2Net.Tests.csproj
+++ b/tests/B2Net.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AuthorizeTest.cs" />
     <Compile Include="BaseTest.cs" />
     <Compile Include="BucketTests.cs" />
+    <Compile Include="FileTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestContstants.cs" />
   </ItemGroup>
