--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,7 @@ publish/
 !**/packages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
+**.lock.json
 
 # Windows Azure Build Output
 csx/
