--- a/src/B2Net/B2Net.csproj
+++ b/src/B2Net/B2Net.csproj
@@ -2,16 +2,20 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5161362E-59B9-4959-8701-59FEEF469ECA}</ProjectGuid>
+    <ProjectGuid>{E178FF84-E6B4-4C08-8B2F-E190A6BCFE4A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>B2Net</RootNamespace>
     <AssemblyName>B2Net</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
+    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,33 +35,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <None Include="project.json" />
+    <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
     <Compile Include="B2Client.cs" />
     <Compile Include="Buckets.cs" />
     <Compile Include="Files.cs" />
-    <Compile Include="Http\RequestGenerators\BaseRequestGenerator.cs" />
-    <Compile Include="Http\RequestGenerators\FileDeleteRequestGenerator.cs" />
-    <Compile Include="Http\RequestGenerators\AuthRequestGenerator.cs" />
-    <Compile Include="Http\RequestGenerators\BucketRequestGenerators.cs" />
     <Compile Include="Http\BucketTypes.cs" />
     <Compile Include="Http\Constants.cs" />
-    <Compile Include="Http\RequestGenerators\FileDownloadRequestGenerators.cs" />
-    <Compile Include="Http\RequestGenerators\FileUploadRequestGenerators.cs" />
-    <Compile Include="Http\RequestGenerators\FileMetaDataRequestGenerators.cs" />
     <Compile Include="Http\HttpClientFactory.cs" />
+    <Compile Include="Http\RequestGenerators\AuthRequestGenerator.cs" />
+    <Compile Include="Http\RequestGenerators\BaseRequestGenerator.cs" />
+    <Compile Include="Http\RequestGenerators\BucketRequestGenerators.cs" />
+    <Compile Include="Http\RequestGenerators\FileDeleteRequestGenerator.cs" />
+    <Compile Include="Http\RequestGenerators\FileDownloadRequestGenerators.cs" />
+    <Compile Include="Http\RequestGenerators\FileMetaDataRequestGenerators.cs" />
+    <Compile Include="Http\RequestGenerators\FileUploadRequestGenerators.cs" />
     <Compile Include="Http\ResponseParser.cs" />
     <Compile Include="Models\B2AuthResponse.cs" />
     <Compile Include="Models\B2Bucket.cs" />
@@ -68,17 +62,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
-  -->
   <Target Name="AfterBuild">
-    <!-- <Exec Command=".\nuget.exe pack .\B2NET.csproj -IncludeReferencedProjects -Prop Configuration=Release"> 
-    </Exec>-->
   </Target>
+  -->
 </Project>
