--- a/src/project.json
+++ b/src/project.json
@@ -1,9 +1,12 @@
 ﻿{
+  "title": "B2.Net",
+  "description": ".NET library for Backblaze's B2 Cloud Storage",
   "supports": {},
   "dependencies": {
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
+    "System.Net.Http": "4.1.0",
     "System.Security.Cryptography.Algorithms": "4.2.0"
   },
   "frameworks": {
