--- a/src/project.json
+++ b/src/project.json
@@ -6,6 +6,7 @@
     "Microsoft.NETCore.Portable.Compatibility": "1.0.1",
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
+    "System.IO": "4.3.0",
     "System.Net.Http": "4.1.0",
     "System.Security.Cryptography.Algorithms": "4.2.0"
   },
