--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,24 @@
 # EditorConfig is awesome: https://EditorConfig.org
 
+###############################
+# Core EditorConfig Options   #
+###############################
+
 root = true
 
+# All files
 [*]
 indent_style = tab
+
+# Code files
+[*.{cs,csx,vb,vbx}]
 indent_size = 4
+insert_final_newline = true
+
+
+###############################
+# .NET Coding Conventions     #
+###############################
+
+[*.{cs,vb}]
+csharp_new_line_before_open_brace = none
