--- a/src/B2Net.csproj
+++ b/src/B2Net.csproj
@@ -15,15 +15,14 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <Authors>Westropp Ventures</Authors>
-    <Version>0.7.2.0</Version>
+    <Version>0.7.4.0</Version>
 	
     <PackageId>B2Net</PackageId>
-    <PackageVersion>0.7.2.0</PackageVersion>
+    <PackageVersion>0.7.4.0</PackageVersion>
     <PackageProjectUrl>https://github.com/coryrwest/B2.NET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/coryrwest/B2.NET</RepositoryUrl>
-    <LicenseURL>https://github.com/coryrwest/B2.NET/blob/master/LICENSE</LicenseURL>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>B2 Backblaze Cloud Storage</PackageTags>
-    <PackageIconUrl>https://github.com/coryrwest/B2.NET/blob/master/LICENSE</PackageIconUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
