--- a/tests/B2NET.Tests.csproj
+++ b/tests/B2NET.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
+		<SuppressTfmSupportBuildErrors>true</SuppressTfmSupportBuildErrors>
   </PropertyGroup>
 
   <ItemGroup>
