Update json serializer to use System.Json clean up using statements, fixed a couple tests, fixed a bug in file retention settings.

--- a/src/B2Net.csproj
+++ b/src/B2Net.csproj
@@ -44,6 +44,10 @@
     <Reference Include="System.Net.Http" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="9.0.6" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net462'">
     <DefineConstants>NET462;NETFULL</DefineConstants>
   </PropertyGroup>
