--- a/src/B2Net.csproj
+++ b/src/B2Net.csproj
@@ -5,6 +5,8 @@
     <AssemblyTitle>B2.Net</AssemblyTitle>
     <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
     <AssemblyName>B2.Net</AssemblyName>
+		<Nullable>enable</Nullable>
+		<LangVersion>8.0</LangVersion>
     <NetStandardImplicitPackageVersion>2.0.0</NetStandardImplicitPackageVersion>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
